--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "prop-types": "^15.8.1",
@@ -24,6 +26,9 @@
     "react-native": "0.76.6",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.22.1",
+    "react-native-pager-view": "^6.7.0",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1"
   },
